DuPont DevSB/src/objects/Item_for_Management_Attention__c.object
<CustomObject>
    <description>Items for Management Attention</description>
    <fields>
        <fullName>Actions_Taken__c</fullName>
        <description>Actions Taken</description>
        <label>Actions Taken</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Status Report</description>
        <label>Status Report</label>
        <referenceTo>Status_Report__c</referenceTo>
        <relationshipName>R00N80000002QnvsEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In-Process</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item for Management Attention</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Item for Management Attention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items for Management Attention</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>